--- a/style.css
+++ b/style.css
@@ -11,12 +11,15 @@ body{
     font-weight: 300;
     font-size: 18px;
     line-height: 1.5;
+    
 }
 
 .header{
     background-color: #008080;
     width: 100%;
     height: 60px;
+    max-width: 1440px;
+    margin: 0 auto;
     
 }
 
@@ -24,7 +27,6 @@ body{
     max-width: 1440px;
     margin: 0 auto;
     
-
 }
 
 .nav-list{
@@ -82,7 +84,7 @@ main{
 .main-container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: flex-start;
+    justify-content: center;
 }
   
 .section {
